--- a/css/PixelPainter.css
+++ b/css/PixelPainter.css
@@ -1,12 +1,53 @@
+body {
+  background-color: aliceblue;
+  background-image: url("https://aleciarachel.files.wordpress.com/2013/04/tumblr_minkswqbbm1r50au6o1_12802.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+h1 {
+  font-family: 'Just Me Again Down Here', cursive;
+  font-size: 10vw;
+  color: #38598b;
+  margin: 1vw;
+  text-align: center;
+  text-shadow:
+    -1px -1px 0 lightpink,
+    1px -1px 0 lightpink,
+    -1px 1px 0 lightpink,
+    1px 1px 0 lightpink;
+}
+
+#eraseSingle {
+  display: flex;
+  flex-direction: row;
+  background-color: white;
+}
+
+#eraserID {
+  background-color: white;
+}
+
+#canvasNav {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 3vw;
+  margin-left: 10vw;
+  width: 80vw;
+}
+
 #container1 {
   height: auto;
   width: auto;
   margin-bottom: 1vw;
   display: flex;
+  justify-content: center;
 }
 
 #pixelCanvas {
+  background-color: white;
   width: auto;
+  max-width: 70vw;
   height: auto;
   border: 3px solid black;
   display: flex;
@@ -25,6 +66,7 @@
   border-color: lightgray;
   height: 15px;
   width: 15px;
+  flex-grow: inherit;
 }
 
 .paletteRow {
@@ -47,50 +89,47 @@
   width: 20px;
 }
 
-/* Dropdown Button */
-#myDropdown {
-  display: none;
-}
-
 .dropbtn {
-  background-color: #3498DB;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
+  font-family: 'Arsenal', sans-serif;
+  font-weight: 900;
+  border-color: #38598b;
+  background-color: white;
+  color: 38598b;
+  padding: 1vw;
+  font-size: 1.5vw;
+  border: .5px solid;
   cursor: pointer;
+  border-radius: 6px;
+  margin-left: 1vw;
 }
 
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
+.dropbtn:hover,
+.dropbtn:focus {
+  background-color: #ffd7e8;
 }
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
-  position: relative;
-  display: inline-block;
+  position: sticky;
+  display: block;
 }
 
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
+.dropdownContent {
+  display: none;
   position: absolute;
   background-color: #f1f1f1;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
-/* items inside the dropdown */
-.dropdown-content a {
+.dropdownContent div {
   color: black;
-  padding: 12px 16px;
+  padding: 1vw 1vw;
+  text-align: left;
   text-decoration: none;
   display: block;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+.dropdownContent div:hover {
+  background-color: #ddd
+}
