--- a/css/PixelPainter.css
+++ b/css/PixelPainter.css
@@ -19,18 +19,12 @@ h1 {
 }
 
 #eraseSingle {
-  display: flex;
-  flex-direction: row;
-  background-color: white;
-}
-
-#eraserID {
-  background-color: white;
+  min-width: 7.5vw;
 }
 
 #canvasNav {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   margin-bottom: 3vw;
   margin-left: 10vw;
   width: 80vw;
@@ -42,6 +36,10 @@ h1 {
   margin-bottom: 1vw;
   display: flex;
   justify-content: center;
+}
+
+#floodfill {
+  min-width: 6vw;
 }
 
 #pixelCanvas {
@@ -57,6 +55,16 @@ h1 {
 #pixelPalette {
   width: auto;
   margin-right: 2vw;
+}
+
+#saveNow {
+  min-width: 6.5vw;
+}
+
+.iconButton {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .pixel {
